Dispatch scroll events as mouse wheel events in mus.

This is a temporary workaround to avoid crashing on scroll events. We will
change this once we have scroll event support in mus.

BUG=602859

Review URL: https://codereview.chromium.org/1892883002

Cr-Commit-Position: refs/heads/master@{#387966}

Former-commit-id: e3e408aed9d1b2886f984ab7e7beaddd787edfe9