components/mus/ws/platform_display.cc
@@ -358,7 +358,11 @@ void DefaultPlatformDisplay::OnDamageRect(const gfx::Rect& damaged_region) {
 }
 
 void DefaultPlatformDisplay::DispatchEvent(ui::Event* event) {
-  if (event->IsMouseEvent() && !event->IsMouseWheelEvent()) {
+  if (event->IsScrollEvent()) {
+    // TODO(moshayedi): crbug.com/602859. Dispatch scroll events as
+    // they are once we have proper support for scroll events.
+    delegate_->OnEvent(ui::MouseWheelEvent(*event->AsScrollEvent()));
+  } else if (event->IsMouseEvent() && !event->IsMouseWheelEvent()) {
     delegate_->OnEvent(ui::PointerEvent(*event->AsMouseEvent()));
   } else if (event->IsTouchEvent()) {
     delegate_->OnEvent(ui::PointerEvent(*event->AsTouchEvent()));
